# experimental-workspace

./: AGENTS.md  README.md
experiments/graphrag/: .gitignore  AGENTS.md  README.md
experiments/graphrag-word-example/: AGENTS.md  README.md
experiments/graphrag-word-example/APPENDIX/: DeepReserch.md
experiments/graphrag-word-example/edgedb/: docker-compose.yml
experiments/graphrag-word-example/edgedb/data/: sample.json
experiments/graphrag-word-example/edgedb/src/: build.py  common.py  query.py  update.py
experiments/graphrag-word-example/neo4j/: .env.example  docker-compose.yml  pyproject.toml
experiments/graphrag-word-example/neo4j/data/: sample.json
experiments/graphrag-word-example/neo4j/src/: build.py  update.py
experiments/graphrag-word-example/surrealdb/: docker-compose.yml  pyproject.toml
experiments/graphrag-word-example/surrealdb/src/: build.py  common.py  query.py  update.py
experiments/graphrag/APPENDIX/superpowers/plans/: 2026-06-20-graphrag-poc.md
experiments/graphrag/edgedb/: Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
experiments/graphrag/edgedb/dbschema/: default.esdl
experiments/graphrag/edgedb/src/: build.py  common.py  query.py  run.py  update.py
experiments/graphrag/neo4j/: Dockerfile  pyproject.toml  requirements.txt
experiments/graphrag/neo4j/src/: build.py  common.py  query.py  run.py  update.py
experiments/graphrag/surrealdb/: docker-compose.yml  pyproject.toml
experiments/graphrag/surrealdb/src/: build.py  common.py  query.py  run.py  update.py
(+1 files in other folders)
