[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "graphrag-surrealdb"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "langchain-core",
    "langchain-surrealdb==0.2.1",
    "langchain-ollama",
    "surrealdb",
]

[tool.setuptools]
packages = []
